--- a/.github/workflows/mavven.yaml
+++ b/.github/workflows/mavven.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: running the jar file
         id : rtjf
         run : |
-          cp ${{ github.workspace }}/src/target/demo-0.0.1-SNAPSHOT.jar ${{ github.workspace }}/test.jar
+          cp ${{ github.workspace }}/src/main/target/demo-0.0.1-SNAPSHOT.jar ${{ github.workspace }}/test.jar
           ls = ltr
           java = jar test.jar
 
