--- a/.github/workflows/mavven.yaml
+++ b/.github/workflows/mavven.yaml
@@ -27,5 +27,10 @@ jobs:
           ls -ltr
           java -jar demo-0.0.1-SNAPSHOT.jar
 
+      - name: terminating the jar file
+        id: ttjf
+        run: |
+          pkill -f "demo-0.0.1-SNAPSHOT.jar" || echo "process not found"
+#          to kill the process full command line
 
 
