--- a/.github/workflows/mavven.yaml
+++ b/.github/workflows/mavven.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: running the jar file
         id : rtjf
         run : |
-          cp ${{ github.workspace }}/target/demo-0.0.1-SNAPSHOT.jar ${{ github.workspace }}/demo-0.0.1-SNAPSHOT.jar
+          cp ${{ github.workspace }}/target/demo-0.0.1-SNAPSHOT.jar ${{ github.workspace }}/demo-0.0.1-SNAPSHOT.jar &
           ls -ltr
           java -jar demo-0.0.1-SNAPSHOT.jar
 
