--- a/.github/workflows/mavven.yaml
+++ b/.github/workflows/mavven.yaml
@@ -31,6 +31,7 @@ jobs:
         id: ttjf
         run: |
           pkill -f "demo-0.0.1-SNAPSHOT.jar" || echo "process not found"
+          git status
 #          to kill the process full command line
 
 
